--- a/expanding cards/style.css
+++ b/expanding cards/style.css
@@ -55,3 +55,15 @@ body{
 .panel.active h3{
     opacity: 1;
 }
+
+
+@media(max-width: 480px){
+    .container{
+        width:100vw
+    }
+
+    .panel:nth-of-type(4),
+    .panel:nth-of-type(4){
+ display: none;
+    }
+}
